tests/negative/gold/lambda_test.gold
tests/negative/lambda_test.toit:4:24: error: Unresolved identifier: 'unresolved'
  lambda := (:: return unresolved 499)
                       ^~~~~~~~~~
tests/negative/lambda_test.toit:4:17: error: Can't explicitly return from within a lambda
  lambda := (:: return unresolved 499)
                ^~~~~~
tests/negative/lambda_test.toit:5:9: error: Unresolved identifier: 'unresolved2'
  throw unresolved2
        ^~~~~~~~~~~
Compilation failed.
